frontend/tests/errors/ER-023/per_element_array_broadcast_side_effect_scalar/test.vx
// @rfc: docs/vexel-rfc.md#operators--precedence
// @desc: Dotted per-element array operators reject side-effecting scalar operands when broadcasting because the scalar would be re-evaluated for each element. | Per-element array operators reject side-effecting broadcast scalars

&!seed() -> #i32;

&^main() -> #i32 {
  xs:#i32[2] = [1, 2];
  ys:#i32[2] = xs .+ seed();
  0
}
